--- a/index.html
+++ b/index.html
@@ -32,6 +32,31 @@
           - Switch out your lorem ipsum for Hipster Ipsum (https://hipsum.co/)
           - In your contact me section, make the text "Phone:" and "Email:" bolded
      -->
+
+     <div>
+      <h1>Neil Gardner</h1>
+      <h2>Software Developer</h2>
+      <hr />
+      <p>My <em>favorite</em> thing about programming is the ability to create any program</p>
+      <h3>About Me</h3>
+      <img src="https://static.generated.photos/vue-statics/face-generator/landing/wall/20.jpg" alt="/Users/neilgardner/FSI-Build-a-Portfolio/images/Photo on 7-27-22 at 12.32 PM.jpg">
+      <p>
+         Lorem ipsum dolor sit amet, movet vidisse partiendo sea ut, sed ei posidonium signiferumque, tincidunt reprimique eam no. Ei corpora ponderum praesent ius, cum in nibh noster definitionem. Ut utroque imperdiet nam, stet ridens graeci ne sea, ea solum inciderint has. Nec laudem nominati ad, cu posse solet mollis usu. Vim posse disputando consequuntur at.
+
+        Et sint tantas facilisi vim. At harum exerci lobortis eos, eros homero assentior nam eu. An tation decore equidem vix, at nam omittam sensibus. Eu quas veniam cum, et consequat constituam sit. His cu dicat minim accumsan, et usu consequat intellegam.
+      </p>
+      <h3>My Projects</h3>
+      <ul>
+        <li>Project 1</li>
+        <li>Project 2</li>
+        <li>Project 3</li>
+      </ul>
+      <h3>Contact Me</h3>
+      <p><strong>Phone:</strong> (212)935-8600</p>
+      <p>Email: <a href="neil.gard1234@gmail.com">neil.gard1234@gmail.com</a></p>
+     </div>
+  
+
 </body>
 
 </html>
