Apply CSS external file  to Decorate Your Portfolio

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>My Portfolio</title>
+
+    <link rel="stylesheet" href="/Users/neilgardner/FSI-Build-a-Portfolio/css/styles.css">
 </head>
 
 <body>
@@ -33,17 +35,20 @@
           - In your contact me section, make the text "Phone:" and "Email:" bolded
      -->
 
-     <div>
+     <div class="transbox", class="cell">
       <h1>Neil Gardner</h1>
       <h2>Software Developer</h2>
       <hr />
-      <p>My <em>favorite</em> thing about programming is the ability to create any program</p>
+      <p class="p1", class="cell">My <em>favorite</em> thing about programming is the ability to create any program</p>
       <h3>About Me</h3>
       <img src="https://static.generated.photos/vue-statics/face-generator/landing/wall/20.jpg" alt="/Users/neilgardner/FSI-Build-a-Portfolio/images/Photo on 7-27-22 at 12.32 PM.jpg">
-      <p>
+      <p class="p2">
          Lorem ipsum dolor sit amet, movet vidisse partiendo sea ut, sed ei posidonium signiferumque, tincidunt reprimique eam no. Ei corpora ponderum praesent ius, cum in nibh noster definitionem. Ut utroque imperdiet nam, stet ridens graeci ne sea, ea solum inciderint has. Nec laudem nominati ad, cu posse solet mollis usu. Vim posse disputando consequuntur at.
 
         Et sint tantas facilisi vim. At harum exerci lobortis eos, eros homero assentior nam eu. An tation decore equidem vix, at nam omittam sensibus. Eu quas veniam cum, et consequat constituam sit. His cu dicat minim accumsan, et usu consequat intellegam.
+      </div class="transbox">
+    
+      <div class="transbox">
       </p>
       <h3>My Projects</h3>
       <ul>
@@ -51,10 +56,15 @@
         <li>Project 2</li>
         <li>Project 3</li>
       </ul>
+
+      </div>
+
+      <div class="transbox"
+
       <h3>Contact Me</h3>
-      <p><strong>Phone:</strong> (212)935-8600</p>
-      <p>Email: <a href="neil.gard1234@gmail.com">neil.gard1234@gmail.com</a></p>
-     </div>
+      <p class="p3"><strong>Phone:</strong> (212)935-8600</p>
+      <p class="p3">Email: <a href="neil.gard1234@gmail.com">neil.gard1234@gmail.com</a></p>
+     </div class="tabs">
   
 
 </body>
